demoapp/demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alkalmazas2
spec:
  selector:
    matchLabels:
      app: alkalmazas2
  template:
    metadata:
      labels:
        app: alkalmazas2
    spec:
      containers:
      - name: alkalmazas2
        image: calliotel/nwm_allinone
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
