demoapp/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alkalmazas2
spec:
  selector:
    app: alkalmazas2
  ports:
  - port: 80
    targetPort: 80
