demoapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alkalmazas2
  labels:
    name: alkalmazas2
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: alkalmazas2
            port: 
              number: 80
